--- a/_posts/2009-08-18-pause-sleep-substitute-in-dos-batch-file.textile
+++ b/_posts/2009-08-18-pause-sleep-substitute-in-dos-batch-file.textile
@@ -1,6 +1,14 @@
+---
+layout: post
+title: Pause/sleep substitude in DOS batch file
+---
+
+h1. {{ page.title }}
+
 It is beyond me why Windows batch files don't have a built in sleep command.
 
-I know it is a part of the Windows Resource Kit, but when installing extra pack is not an option, you can always resort <a href="http://malektips.com/dos0017.html">to using ping</a> as a poor man's substitute for sleep.
+I know it is a part of the Windows Resource Kit, but when installing
+extra pack is not an option, you can always resort "to using ping":http://malektips.com/dos0017.html as a poor man's substitute for sleep.
 
 For example this command will effectively sleep for 15 seconds:
 <pre lang="dos">ping 1.1.1.1 -n 1 -w 15000 > NUL</pre>
