--- a/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
+++ b/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
@@ -82,9 +82,11 @@ gem 'compass', :git => 'https://github.com/chriseppstein/compass.git', :branch =
 
 h2. Migrating the rest of the assets
 
+There is a lovely "discussion":https://github.com/rails/rails/issues/1209 going on the usage of helper functions to link assets (images/audio/fonts etc) inside your css. While some people suggested using ERB preprocessing and renaming your stylesheets to application.css.scss.erb, there is a better solution. sass-rails gem to the rescue.
+
 h3. New helpers
 
-From sass-rails gem:
+sass-rails gem defines new helpers to use inside scss templates. From sass-rails gem README:
   * `asset_path($relative-asset-path, $asset-class)` - Returns a string to the asset.
     For example: `asset_path("rails.png", image)` becomes `"/assets/rails.png"`
   * `asset_url($relative-asset-path, $asset-class)` - Returns url reference to the asset.
@@ -95,19 +97,32 @@ From sass-rails gem:
     For example: `image_url("rails.png")` becomes `url(/assets/rails.png)` and
     `image_path("rails.png")` becomes `"/assets/rails.png"`.
 
-You have to use ERB to link to asset pipelined resource.
-
 {% highlight css %}
 body {
-  background: url(<%= asset_path "sunshine-rainbows-and-lollipops.png" %>);
+  some-path: asset-path("rails.png", image);
+  some-url: asset-url("rails.png", image);
 }
 {% endhighlight %}
 
+Infortunately at the time of the this post using image-url("rails.png") returns "/images/rails/png?1234534" instead of "/assets/rails.png", but asset_path and asset_url work as expected. "Here":https://github.com/rails/sass-rails/issues/11 is the bug (closed already).
+
 h2. Deploying to Heroku, S3, CloudFront
+
+Running Rails asset pipeline in development mode is quite slow (in fact too slow if you ask me), so for deployment to production you will want to precompile your assets. If a file exists under public/assets it will be served by rails without invoking the asset pipeline and recompiling the file.
+
+@rake assets:precompile RAILS_ENV=production@
+
+Setting production environment is important here. The result of precompilation is the public/assets folder populated with all your compiled .js and .css fiels with MD5 hash included to the name. If you use sass-rails asset helpers, the paths inside css will also be rewriten to point to the fingerprinted assets. 
+
+Once the assets were precompiled, you can either add them to git, and deploy like that, or upload them to S3, and change config.asset_host to point to your S3 bucket host.
+
+(More to be added)
 
 h2. Final cleanup
 
-h2. References
+The final cleanup consists of removing jammit and/or jammit-s3 gems from Gemfile, @bundle install@ it, removing config/assets.yml, calls to include jammit packages from the layout markup.
 
+h2. References
+"Rails Guides Asset Pipeline":http://ryanbigg.com/guides/asset_pipeline.html
 "Rails 3.1 Asset Pipeline in the Real World":http://blog.nodeta.com/2011/06/14/rails-3-1-asset-pipeline-in-the-real-world/
 "Trying to get Compass working with the Rails 3.1 asset pipeline":https://gist.github.com/1032551
