--- a/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
+++ b/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
@@ -82,9 +82,9 @@ gem 'compass', :git => 'https://github.com/chriseppstein/compass.git', :branch =
 
 h2. Migrating the rest of the assets
 
-There is a lovely "discussion":https://github.com/rails/rails/issues/1209 going on the usage of helper functions to link assets (images/audio/fonts etc) inside your css. While some people suggested using ERB preprocessing and renaming your stylesheets to application.css.scss.erb, there is a better solution. sass-rails gem to the rescue.
+h3. Asset helpers
 
-h3. New helpers
+There is a lovely "discussion":https://github.com/rails/rails/issues/1209 going on the usage of helper functions to link assets (images/audio/fonts etc) inside your css. While some people suggested using ERB preprocessing and renaming your stylesheets to application.css.scss.erb, there is a better solution. sass-rails gem to the rescue.
 
 sass-rails gem defines new helpers to use inside scss templates. From sass-rails gem README:
   * `asset_path($relative-asset-path, $asset-class)` - Returns a string to the asset.
@@ -106,17 +106,33 @@ body {
 
 Infortunately at the time of the this post using image-url("rails.png") returns "/images/rails/png?1234534" instead of "/assets/rails.png", but asset_path and asset_url work as expected. "Here":https://github.com/rails/sass-rails/issues/11 is the bug (closed already).
 
+h3. Other gotchas and tips
+
+If you are useing Sass's @@import "somepartial";@ in your application.css.scss, the partial file should be named @_somepartial.css.scss@ (.css.scss ending is important), otherwise variables defined in that partial will not be visible outside of that partial, and you will get @Sass::SyntaxError: Undefined variable: "$xxx"@.
+
+jQuery UI images are referenced from jQuery UI stylesheet as a relative url('images/image-xxx.png'), and this link gets broken because the final stylesheet that gets served to the browser is /assets/application.css. Instead of modifying jquery ui css, I moved the images under public/assets/images. This may not be the best solution but allows for a drop-in jquery-ui styles replacement without modifying all internal references to images.
+
+If you are using Mongoid, you may notice that rendering a page takes forever, every image request takes a while. Apparently this is due to Mongoid preloading all models (and hittng mongod) for every request, even for an image. Adding 
+@config.mongoid.preload_models = false@
+in your config/environments/development.rb makes your migration much much faster. ("Beware if you are using single collection inheritance":http://mongoid.org/docs/rails/railties.html)
+
 h2. Deploying to Heroku, S3, CloudFront
 
-Running Rails asset pipeline in development mode is quite slow (in fact too slow if you ask me), so for deployment to production you will want to precompile your assets. If a file exists under public/assets it will be served by rails without invoking the asset pipeline and recompiling the file.
+Running Rails asset pipeline in development mode is recompiling css/js/images on each request, so for deployment to production you will want to precompile your assets. If a file exists under public/assets it will be served by rails without invoking the asset pipeline and recompiling the file.
 
-@rake assets:precompile RAILS_ENV=production@
+To compile assets rails comes with assets:precompile rake task.
+
+@bundle exec rake assets:precompile RAILS_ENV=production@
 
 Setting production environment is important here. The result of precompilation is the public/assets folder populated with all your compiled .js and .css fiels with MD5 hash included to the name. If you use sass-rails asset helpers, the paths inside css will also be rewriten to point to the fingerprinted assets. 
 
-Once the assets were precompiled, you can either add them to git, and deploy like that, or upload them to S3, and change config.asset_host to point to your S3 bucket host.
+Once the assets were precompiled its up to you how they make it to production server. You can either add them to git, and deploy like that, or upload them to S3, + change config.asset_host to point to your S3 bucket host. Gems like "asset_id":https://github.com/moocode/asset_id can be helpful here.
 
-(More to be added)
+I opted to add precompiled assets to my git repo and create a CloudFront distribution with the origin server as my production server. Then you need to change config.asset_host to that distribution's domain name inside config/environments/production.rb. This removed the step of uploading files to S3, makes deployment faster (and the fewer moving parts the better).
+
+The only gotcha here is that running assets:precompile with RAILS_ENV=production loads the whole rails environment and mongoid wants to connect to the production database and fails. My config/mondoid.yml uses MONGOHQ_URL for connection, so to trick rails I just passed this env var to the rake task:
+@bundle exec rake assets:precompile RAILS_ENV=production MONGOHQ_URL=mongodb://myuser:mypasswd@localhost/db_development@
+
 
 h2. Final cleanup
 
