--- a/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
+++ b/_posts/2011-07-05-switching-to-assets-pipeline-from-jammit.textile
@@ -60,6 +60,10 @@ h2. Making Sprockets Asset Pipeline work in parallel with Jammit
 # Move images from public/images to app/assets/images. Note that the paths hardcoded in stylesheets may be broken (we will fix it later)
 # Restart server, most of the site should be functioning. Watch the server console output for the assets it processeing and any broken asset linkss
 
+Tip: by default Sprockets will concatenate all your javascripts into one /assets/application.js event in development environment. This may not be ideal if you have lots of files and need debugging. Adding :debug => true to the calls to include_javascript solves the issue:
+@= javascript_include_tag 'application', :debug => Rails.env.development?@
+
+
 h2. Shifting some weight to sprockets
 
 Here we make asset pipeline serve jquery, jquery_ujs and jquery-ui javascript files that are bundled in jquery-rails gem.
